--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,15 @@
 </head>
 
 <body>
+  <div class="alert-container" id="alertContainer"></div>
   <h1>Webcam Object Detection</h1>
   
   <div class="stats-container">
     <div class="stat-item">
       Total Objects Detected: <span class="count" id="totalCount">0</span>
+    </div>
+    <div class="stat-item">
+      Motion Sensor: <span id="motionStatus" class="status-badge"></span>
     </div>
     <div class="class-list" id="classList"></div>
   </div>
